--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -55,7 +55,7 @@ jobs:
           mkdir build
           cd build
 
-          export LD_LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/aarch64-linux/devlib/:${LD_LIBRARY_PATH}
+          export LD_LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/$(uname -m)-linux/devlib/:${LD_LIBRARY_PATH}
 
           cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DGGML_CANN=on -DSOC_TYPE=${{ matrix.device }}
           cmake --build . -j $(nproc)
