--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -52,6 +52,11 @@ jobs:
       - name: Build llama.cpp
         working-directory: llama.cpp
         run: |
+          set -x
+
+          echo $PATH
+          echo $LD_LIBRARY_PATH
+
           export ASCEND_TOOLKIT_HOME=/usr/local/Ascend/ascend-toolkit/latest
           export LD_LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/$(uname -m)-linux/devlib/:${LD_LIBRARY_PATH}
 
