--- a/.github/workflows/llamacpp.yaml
+++ b/.github/workflows/llamacpp.yaml
@@ -52,13 +52,7 @@ jobs:
       - name: Build llama.cpp
         working-directory: llama.cpp
         run: |
-          set -x
-
-          echo $PATH
-          echo $LD_LIBRARY_PATH
-
-          export ASCEND_TOOLKIT_HOME=/usr/local/Ascend/ascend-toolkit/latest
-          export LD_LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/$(uname -m)-linux/devlib/:${LD_LIBRARY_PATH}
+          export LD_LIBRARY_PATH=${ASCEND_TOOLKIT_HOME}/lib64:${ASCEND_TOOLKIT_HOME}/$(uname -m)-linux/devlib/:${LD_LIBRARY_PATH}
 
           cmake -S . -B build \
               -DCMAKE_BUILD_TYPE=${{ matrix.build }} \
