--- a/.github/workflows/deepspeed.yaml
+++ b/.github/workflows/deepspeed.yaml
@@ -57,7 +57,7 @@ jobs:
         run: |
           apt-get update
           apt-get install -y \
-              git gcc g++ make cmake ninja-build
+              git gcc g++ make cmake ninja-build sudo
 
       - name: Checkout
         uses: actions/checkout@v4
