--- a/.github/workflows/deepspeed.yaml
+++ b/.github/workflows/deepspeed.yaml
@@ -47,6 +47,7 @@ jobs:
       - name: Show NPU info
         run: |
           npu-smi info
+          python --version
 
       - name: Config mirrors
         run: |
