--- a/.github/workflows/deepspeed.yaml
+++ b/.github/workflows/deepspeed.yaml
@@ -47,18 +47,18 @@ jobs:
       - name: Show NPU info
         run: |
           npu-smi info
-          which python
-
-      - name: Config mirrors
-        run: |
-          sed -i 's|ports.ubuntu.com|mirrors.tuna.tsinghua.edu.cn|g' /etc/apt/sources.list
-          pip config set global.index-url https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple
-
+          
       - name: Install system dependencies
         run: |
           apt-get update
           apt-get install -y \
               git gcc g++ make cmake ninja-build sudo
+          sudo apt-get install python -y
+
+      - name: Config mirrors
+        run: |
+          sed -i 's|ports.ubuntu.com|mirrors.tuna.tsinghua.edu.cn|g' /etc/apt/sources.list
+          pip config set global.index-url https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple
 
       - name: Checkout
         uses: actions/checkout@v4
