--- a/.github/workflows/deepspeed.yaml
+++ b/.github/workflows/deepspeed.yaml
@@ -52,8 +52,7 @@ jobs:
         run: |
           apt-get update
           apt-get install -y \
-              git gcc g++ make cmake ninja-build sudo
-          sudo apt-get install python -y
+              git gcc g++ make cmake ninja-build python-is-python3
 
       - name: Config mirrors
         run: |
