--- a/.github/workflows/deepspeed.yaml
+++ b/.github/workflows/deepspeed.yaml
@@ -52,7 +52,7 @@ jobs:
         run: |
           apt-get update
           apt-get install -y \
-              git gcc g++ make cmake ninja-build python-is-python3
+              git gcc g++ make cmake ninja-build python-is-python3 python3-pip
 
       - name: Config mirrors
         run: |
